server/static/wrstat/src/index.css
html {
  margin: 0;
}

body {
  padding: 0 0.25em;
}

#auth {
  float: right;
}

#usageTable {
  table-layout: fixed;
  width: calc(100vw - 2em);
}

#usageTable tbody {
  white-space: nowrap;
}

#usageTable td {
  overflow: hidden;
}

#usageTable .selected td:first-child {
  white-space: normal;
}

#usageTable td:first-child {
  text-overflow: ellipsis;
}

#usageTable col:nth-child(2), #usageTable col:nth-child(3),
#usageTable col:nth-child(7), #usageTable col:nth-child(8),
#usageTable col:nth-child(9) {
  width: 5em;
}

#usageTable col:nth-child(4), #usageTable col:nth-child(5) {
  width: 7em;
}

#usageTable col:nth-child(6) {
  width: 8em;
}

#usageTable.user tr > :nth-child(3),
#usageTable.user tr > :nth-child(4),
#usageTable.user tr > :nth-child(6),
#usageTable.user tr > :nth-child(7),
#usageTable.user tr > :nth-child(9) {
  display: none;
}

rect.hasClick {
  cursor: pointer;
}

rect + text, rect + use, rect + use + text {
  pointer-events: none;
  font-family: Times;
}

#treeBreadcrumbs {
  list-style: none;
  padding: 0;
}

#treeBreadcrumbs li {
  display: inline-block;
}

#treeBreadcrumbs li:first-child {
  margin: 0 1em 0 0;
}

#treeBreadcrumbs li:first-child:after {
  content: ":";
  display: inline-block;
}

#treeBreadcrumbs button {
  cursor: pointer;
}

#treeBreadcrumbs li:not(:first-child):not(:last-child):after {
  display: inline-block;
  margin: 0 1em;
  content: "/";
}

.prettyTable {
  clear: both;
  border-collapse: separate;
  border-spacing: 0;
}

.prettyTable thead th {
  padding-right: 1em;
}

.prettyTable thead th.sortable:hover {
    text-decoration: underline;
    cursor: pointer;
}

.prettyTable .sortable {
  height: 2em;
  background-repeat: no-repeat;
  background-position: right 0 center;
  background-size: 1em 2em;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23aaa'  fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23aaa' fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
}

.prettyTable .sort {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23aaa'  fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23f00' fill-opacity='1' stroke='%23000' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
}

.prettyTable .reverse {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23f00'  fill-opacity='1' stroke='%23000' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23aaa' fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
}

.prettyTable tbody {
  cursor: pointer;
}

.prettyTable tbody tr td {
  padding: 0.5em 0.25em;
}

#usageTable tbody td:nth-child(2), #usageTable tbody td:nth-child(3), #usageTable tbody td:nth-child(4),
#usageTable tbody td:nth-child(5), #usageTable tbody td:nth-child(6), #usageTable tbody td:nth-child(7),
#usageTable tbody td:nth-child(8),
#historyTable tbody td:nth-child(2), #historyTable tbody td:nth-child(3), #historyTable tbody td:nth-child(4) {
  text-align: right;
  padding-right: 1em;
}

#usageTable tbody td:nth-child(9) {
  text-align: center;
  white-space: nowrap;
}

#historyTable {
  margin-top: 2em;
}

.pagination {
  float: right;
  list-style: none;
  padding: 0;
  user-select: none;
}

.pagination > li {
  display: inline-block;
}

.pagination > li:not(:first-child) {
  margin-left: 0.25em;
}

.pagination_link {
  cursor: pointer;
}

.pagination_link, .pagination_selected {
  padding: 0.25em;
}

.pagination_selected {
  font-weight: bold;
}

#perPage {
  font-weight: bold;
}

#perPage select {
  border-radius: 3px;
  padding: 5px;
  background-color: transparent;
  padding: 4px;
  font-weight: bold;
}

#details {
  border-radius: 8px;
  padding: 1em 0.5em;
  max-width: 100vw;
}

#details table {
  width: 100%;
  table-layout: fixed;
}

#details th {
  text-align: left;
  width: 4em;
}

#details td div {
  white-space: nowrap;
  overflow-x: hidden;
}

#details td div:hover {
  overflow-x: auto;
}

.download {
  background-repeat: no-repeat;
  background-position: 1em 0.25em;
  background-size: 1.5em 1.5em;
  padding: 0.5em 1em 0.5em 3.5em;
  margin-right: 1em;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M40,0 v35 h-20 l30,30 l30,-30 h-20 v-35 z M0,70 v25 h100 v-25 h-30 l-20,15 l-20,-15 z' fill='%23000' stroke-linejoin='round' stroke-width='5' stroke='%23000' /%3E%3C/svg%3E");
}

.minmax {
  position: relative;
  display: block;
  margin: 0 1em;
  height: calc(1em + 4px + 1em + 1px);
  grid-column: 2 / span 3;
}

.minmax_min, .minmax_max, .minmax_minValue, .minmax_maxValue {
  position: absolute;
  top: 0;
}


.minmax_min, .minmax_max {
  padding: 2px;
  margin-top: -6px;
  background-color: #aaa;
}

.minmax_min {
  right: 100%;
}

.minmax_max {
  left: 100%;
}

.minmax_line, .minmax_setLine {
  position: absolute;
  top: calc(1em + 4px + 0.5em - 5px);
  bottom: 5px;
}

.minmax_line {
  left: 0;
  right: 0;
  border-radius: 1em;
}

.minmax_minValue, .minmax_maxValue {
  padding: 2px;
  margin-top: -6px;
  border-radius: 3px;
}

.minmax_minSlider, .minmax_maxSlider {
  position: absolute;
  top: calc(1em + 2px);
  width: 1em;
  height: 1em;
  border-radius: 1em;
  cursor: ew-resize;
}

#history {
  z-index: 1;
}

#history use {
  cursor: crosshair;
}

#historyInfo {
  position: relative;
  height: 0;
}

#historyInfo div {
  display: none;
  position: relative;
  z-index: 2;
  border-radius: 5px;
  padding: 5px;
}

#historyInfo div:hover {
  display: inline-block;
}

.multiInput ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.multiInput > ul li {
  display: inline-block;
}

.multiInput > ul li:not(:first-child) {
  margin-left: 1em;
  padding: 0 0.5em;
  cursor: cell;
}

.multiInput > div {
  height: 0px;
  position: relative;
  z-index: 10;
}

.multiInput > div:not(:focus-within) {
  overflow: hidden;
}

.multiInput > div > div {
  position: absolute;
}

.multiInput > div > div > input {
  box-sizing: border-box;
  width: 100%;
}

.multiInput > div > div ul {
  max-height: 20em;
  overflow-y: scroll;
}

.minmax_min, .minmax_max, .minmax_minValue, .minmax_maxValue {
  white-space: nowrap;
}

summary {
  cursor: pointer;
}

.treeFilter {
  margin-top: 1em;
  display: grid;
  width: 100%;
  gap: 0.5em 1em;
  grid-template-columns: min-content min-content min-content auto min-content;
  justify-items: start;
}

.treeFilter label {
  white-space: nowrap;
  text-align: right;
}

.treeFilter > label:after {
  content: ":";
}

.treeFilter > .multiInput {
  grid-column: 2 / span 3;
}

#scatter {
  grid-column: 5;
  grid-row: 1 / 10;
}

#scatter use {
  cursor: pointer;
}

#scatter .back {
  cursor: crosshair;
}

.treeFilter > select {
  grid-column: 2 / span 2;
}

.age_2years {
  background-color: rgba(215, 48, 39, 0.75)
}

.age_1year {
  background-color: rgba(244, 109, 67, 0.75);
}

.age_10months {
  background-color: rgba(253, 174, 97, 0.75);
}

.age_8months {
  background-color: rgba(254, 224, 139, 0.75);
}

.age_6months {
  background-color: rgba(255, 255, 191, 0.75);
}

.age_3months {
  background-color: rgba(217, 239, 139, 0.75);
}

.age_2months {
  background-color: rgba(166, 217, 106, 0.75);
}

.age_1month {
  background-color: rgba(102, 189, 99, 0.75);
}

.age_1week {
  background-color: rgba(26, 152, 80, 0.75);
}

#treeKey {
  margin-top: 1em;
  font: 12px sans-serif;
}

#treeKey caption {
  padding-bottom: 5px;
  text-align: left;
}

#treeKey span {
  background-color: #007DC1;
  padding: 5px;
  border-radius: 8px;
  margin-right: 0.5em;
}

.treeMap rect {
  fill-opacity: 0.75;
}

.treeMap rect:hover {
  fill-opacity: 0.8;
}

summary, label, text, th, .multiInput, .minmax {
  user-select: none;
}

@media (prefers-color-scheme: light) {
  html, body {
    color: #000;
    background-color: #fff;
  }

  .prettyTable thead th {
    border-bottom: 1px solid #000;
  }

  .prettyTable tbody tr:nth-child(even) {
    background-color: #f9f9f9;
  }

  .prettyTable tbody tr:hover {
    background-color: #c0cee9;
  }

  .prettyTable tbody tr.selected {
    background-color: #b0bed9;
  }

  #perPage select {
    border: 1px solid #aaa;
    color: #000;
  }

  #details {
    background-color: #ddd;
    border: 1px solid #aaa;
  }

  .minmax_line {
    background-color: #aaa;
  }

  .minmax_min, .minmax_max {
    background-color: #ddd;
  }

  .minmax_setLine, .minmax_minValue, .minmax_maxValue {
    color: #fff;
    background-color: #074987;
  }

  .minmax_minSlider, .minmax_maxSlider {
    border: 1px solid #000;
    background-color: #888;
  }

  #historyInfo div {
    border: 1px solid #000;
    background-color: #fff;
  }

  .multiInput > ul li:not(:first-child) {
    border: 1px solid #000;
  }

  .multiInput > div > div {
    background-color: #fff;
  }

  .multiInput > div > div ul {
    border: 0 1px 1px 1px solid #000;
  }

  .pagination_link {
    background-color: #074987;
    border: 1px solid #000;
    color: #fff;
  }

  .pagination_selected {
    border: 1px solid #000;
  }
}

@media (prefers-color-scheme: dark) {
  html, body {
    color: #fff;
    background-color: #000;
    --graphBack: #444;
  }

  .prettyTable thead th {
    border-bottom: 1px solid #fff;
  }

  .prettyTable tbody tr:nth-child(even) {
    background-color: #333;
  }

  .prettyTable tbody tr:hover {
    background-color: #440;
  }

  .prettyTable tbody tr.selected {
    background-color: #442;
  }

  #perPage select {
    border: 1px solid #444;
    color: #fff;
  }

  #details {
    background-color: #444;
    border: 1px solid #888;
  }

  .minmax_line {
    background-color: #aaa;
  }

  .minmax_min, .minmax_max {
    background-color: #444;
  }

  .minmax_setLine, .minmax_minValue, .minmax_maxValue {
    color: #000;
    background-color: #d2ecf5;
  }

  .minmax_minSlider, .minmax_maxSlider {
    border: 1px solid #fff;
    background-color: #666;
  }

  #historyInfo div {
    border: 1px solid #fff;
    background-color: #000;
  }

  .multiInput > ul li:not(:first-child) {
    border: 1px solid #fff;
  }

  .multiInput > div > div {
    background-color: #000;
  }

  .multiInput > div > div ul {
    border: 0 1px 1px 1px solid #fff;
  }

  .pagination_link {
    background-color: #d2ecf5;
    border: 1px solid #fff;
    color: #000;
  }

  .pagination_selected {
    border: 1px solid #fff;
  }
}

